# test

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: cli.py
src/authorization/application/command/auth/: refresh_token.py  sign_in.py  sign_up.py
src/authorization/application/command/user/: update_user_data.py
src/authorization/application/dto/: auth.py  user.py
src/authorization/application/exception/: auth.py  common.py  persistence.py  user.py
src/authorization/application/port/persistence/: uow.py
src/authorization/application/port/security/: token_provider.py
src/authorization/application/query/user/: get_user_data.py
src/authorization/application/query_model/: user.py
src/authorization/composition/: api_app.py
src/authorization/composition/configuration/: settings.py
src/authorization/composition/ioc/: application.py  configuration.py  domain.py  infrastructure.py  presentation.py  provider_registry.py
src/authorization/domain/common/: util.py
src/authorization/domain/entity/: common.py  user.py
src/authorization/domain/enum/audit/: event.py
src/authorization/domain/enum/user/: role.py
src/authorization/domain/exception/: user.py
src/authorization/domain/port/security/: password_hasher.py
src/authorization/domain/service/user/: authentication.py  (+1 more)
src/authorization/domain/value_object/: common.py
src/authorization/infrastructure/logging/: setup.py
src/authorization/presentation/http/: api_router.py  dependencies.py  exception_handler.py
(+35 files in other folders)
